Navbar alignment fixed

--- a/home.css
+++ b/home.css
@@ -12,10 +12,12 @@
 }
 
 .nav {
+    position: fixed;
+    z-index: 1;
     border: 2px solid black;
     text-align: end;
-    /* margin-right: 5rem; */
     height: 5rem;
+    width: 100%;
     background: var(--navbar);
 }
 
