--- a/style.css
+++ b/style.css
@@ -30,19 +30,11 @@
     margin: 0px;
     box-sizing: border-box;
     font-family: 'Baloo Bhai 2', cursive;
-    /* overflow-x: hidden; */
-    /* color: white; */
-    /* background-color: #181818; */
-}
-
-.blok {
-    /* border: 1px solid black; */
 }
 
 #page-wrap {
     display: flex;
     position: relative;
-    /* position: fixed; */
 }
 
 main {
@@ -56,24 +48,17 @@ main {
     z-index: 1;
     grid-column: 1/-1;
     margin-bottom: 4rem;
-    /* border: 1px solid black; */
-    /* background-color: #7952B3; */
-    /* background-color: black; */
-    /* background-color: #7860ac; */
 }
 
 #logo {
     text-align: left;
-    /* font-family: 'Pacifico', cursive; */
     font-family: 'Balsamiq Sans', cursive;
-    /* border: 2px solid black; */
 }
 
 #header img {
     position: relative;
     left: 4rem;
     width: 5rem;
-    /* background-color: crimson; */
 }
 
 a {
@@ -91,12 +76,7 @@ a:hover {
     position: fixed;
     margin-top: 4rem;
     width: 10%;
-    /* position: sticky */
-    /* top: 0px; */
-    /* height: fit-content; */
     height: 15000px;
-    /* background-color: silver; */
-    /* border-right: 3px solid black; */
 }
 
 #sidebar li {
@@ -116,16 +96,11 @@ a:hover {
 }
 
 #content {
-    /* font-family: 'Roboto', sans-serif; */
-    /* font-family: 'Baloo Bhai 2', cursive; */
     font-family: 'Baloo Bhai 2', cursive;
     margin-top: 6rem;
     height: 14500px;
     width: 80%;
-    /* padding-left: 2rem; */
-    /* margin-left: 1rem; */
     border-left: 3px solid var(--black);
-    ;
     padding-left: 1rem;
 }
 
